// 首行：语法指定行
syntax = "proto3";
package proto3;

option java_multiple_files = true;
option java_package = "com.power.proto3";
option java_outer_classname = "ContactsProtos";

import "google/protobuf/any.proto";


// 定义联系人 message

message PeopleInfo {
  string name = 1;
  int32 age = 2;

  message Phone {
    string number = 1;
    // 0值必须存在，且作为第一个枚举常量的值
    // 枚举值范围：32位整数范围，不要设置负数
    enum PhoneType {
      MP = 0; // 移动电话
      TEL = 1; // 固定电话
    }

    PhoneType type = 2;
  }

  repeated Phone phone = 3;

  google.protobuf.Any data = 4;

  // 加强多选一的行为，只保留最后一次设置的成员
  oneof other_contact {
//    repeated string qq = 5;
    string qq = 5;
    string wechat = 6;
  }

}

message Contacts {
  repeated PeopleInfo contacts = 1;
}


message Address {
  string home_address = 1;
  string unit_address = 2;
}



//
//// 首行：语法指定行
//syntax = "proto3";
//package proto3;
//
//option java_multiple_files = true;
//option java_package = "com.power.proto3";
//option java_outer_classname = "ContactsProtos";
//
//// 使用插件注意的注意点
//// 1. 不能使用相对路径
//// 2. 应该导入 protoSourceRoot 设置的路径开始设置
//import "proto3/phone.proto";
//
//// 定义联系人 message
//
//message PeopleInfo {
//  string name = 1;
//  int32 age = 2;
//
//  repeated proto.Phone phone = 3;
//}
//
//
//
//// proto3包下的 phone.protr
//
//// 首行：语法指定行
//syntax = "proto3";
//package proto;
//
//option java_multiple_files = true;
//option java_package = "com.power.proto3";
//option java_outer_classname = "PhoneProtos";
//
//
//message Phone {
//  string number = 1;
//}
